2010-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* UseNoInliningWithGetCallingAssemblyRule.cs: New. Rule to ensure
	Assembly.GetCallingAssembly is called from a method decorated 
	with [MethodImpl (MethodImplOptions.NoInlining)]
	* Makefile.am: Add new rule and tests to the build. Add -d:DEBUG
	to unit tests assembly to remove the three failures in 
	AvoidMethodsWithSideEffectsInConditionalCodeTest

2009-11-28  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewInconsistentIdentityTest.cs: Don't process methods 
	without bodies (e.g. abstract, pinvoke...)

2009-07-28  Cedric Vivier  <cedricv@neonux.com>

	* EnsureLocalDisposalRule.cs: Do not issue false positives for value type disposables.

2009-07-24  Jesse Jones  <jesjones@mindspring.com>

	* AvoidFloatingPointEqualityRule.cs: Rewrote the description and
	examples.

2009-07-01  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2009-06-10  Cedric Vivier <cedricv@neonux.com>

	* BadRecursiveInvocationRule.cs: Catch recursion on static properties/methods
	when the call is the first instruction (excluding arguments if any).

2008-04-30  Jesse Jones  <jesjones@mindspring.com> 

	* AvoidMethodsWithSideEffectsInConditionalCodeRule.cs: 
	Added new rule.

2008-03-19  Jesse Jones  <jesjones@mindspring.com> 

	* ReviewInconsistentIdentityRule.cs: Handle Ldflda so we notice
	when value type fields are used. Complain if GetHashCode uses
	no fields/properties but equality methods do (this catches the
	important case where GetHashCode code merely calls base).

2009-02-19  Cedric Vivier  <cedricv@neonux.com>

	* ProvideCorrectXPathExpressionRule.cs: New. Rule that checks
	valid XPath expressions are provided to methods.

2009-02-19  Cedric Vivier  <cedricv@neonux.com>

	* ProvideValidXmlStringRule.cs: New. Rule that checks valid XML
	strings are provided to methods and properties.

2009-01-03  Sebastien Pouliot  <sebastien@ximian.com> 
